	PR gas/12715 	* gas/config/tc-arm.c (parse_big_immediate):  Fix parsing of 64-bit 	immediates on 32-bit hosts. 	* gas/testsuite/gas/arm/neon-const.s: Add testcase for 64-bit Neon constants. 	* gas/testsuite/gas/arm/neon-const.d: Likewise.